--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">bootstrap test</div><div class="col-md-6">test</div>
-  </div>
-</div>
+<app-table-container></app-table-container>
