--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-table-container></app-table-container>
+
+<h1 class="header">Reward Plan</h1>
+<div class="reward-plan-table">
+  <app-table-container></app-table-container>
+</div>
