--- a/src/app/components/table-container/components/edit-view-table/edit-view-table.component.html
+++ b/src/app/components/table-container/components/edit-view-table/edit-view-table.component.html
@@ -20,26 +20,14 @@
     </tbody>
         <tr [formGroup]="tableRowForm">
           <td>{{initValuesForRow.product}}</td>
+          <td>{{this.tableRowForm.controls.threshold_from.value}}</td>
           <td><input 
-            type='text'
-            id='threshold_from'
-            formControlName='threshold_from'
-            ></td>
-          <td><input 
-            type='text'
+            type='number'
+            min=0
             id='threshold_to'
             formControlName='threshold_to'
             ></td>
-          <td><select 
-            type='text'
-            id='criteria'
-            formControlName='criteria'
-            >  
-            <option value="Turnover">Turnover</option>
-            <option value="Net revenue">Net revenue</option>
-            <option value="Other criteria 1">Other criteria 1</option>
-            <option value="Other criteria 2">Other criteria 2</option>
-          </select></td>
+          <td>{{tableRowForm.controls.criteria.value}}</td>
           <td><input 
             type='number'
             min='0'
@@ -48,7 +36,7 @@
             formControlName='percentage'
             ></td>
           <td>
-            <button (click)="onConfirmAction()" type="button" class="btn btn-primary confirm-button">C</button>
+            <button (click)="onConfirmAction()" type="button" [disabled]="tableRowForm.invalid" class="btn btn-primary confirm-button">apply</button>
           </td>
         </tr>
         <tbody *ngFor="let item of tableValuesArrayBottom; let i = index">
@@ -60,12 +48,6 @@
             <td>{{item.percentage}}</td>
           </tr>
         </tbody>
-        <tr style="visibility: hidden;">
-          <td><input></td>
-          <td><input></td>
-          <td><input></td>
-          <td><input></td>
-          <td><input></td>
-          <td><button class="btn btn-success add-button">ADD</button></td>
-        </tr>
+     
   </table>
+  <div class="warning-message" *ngIf="isMaxPercentSet()">You're about to provide 100% to percentage input. Please verify</div>
